# nf-sp00f-s-EMV-Engine

./: .README.md.kate-swp  .gitignore  INTEGRATION_GUIDE.md  README.md  README.md.backup  build.gradle.kts  gradlew  instructions.md  settings.gradle.kts
.github/instructions/: copilot.instructions.md  memory.instructions.md
Android EMV/: EmvException.kt  EmvTransactionEngine.kt  FILE_ORGANIZATION.md  build.gradle.kts  proguard-rules.pro
Android EMV/src/main/: AndroidManifest.xml
Android EMV/src/main/cpp/: CMakeLists.txt  emv_jni.cpp  nfc_adapter.cpp
Android EMV/src/main/cpp/include/: nfc_adapter.h
Android EMV/src/main/kotlin/com/nf_sp00f/app/emv/: AndroidNfcEmvAdapter.kt  EmvEngine.kt  EmvModels.kt
Android EMV/src/main/kotlin/com/nf_sp00f/app/emv/android/: AndroidNfcEmvAdapter.kt  EmvApiGateway.kt  EmvApplication.kt  EmvBackupManager.kt  EmvBatchProcessor.kt  EmvCacheManager.kt  EmvCardReader.kt  EmvComplianceValidator.kt  EmvConfigurationManager.kt  EmvContactlessInterface.kt  EmvDataProcessor.kt  EmvDatabaseInterface.kt  EmvDeviceManager.kt  EmvEventManager.kt  EmvFileManager.kt  EmvHealthMonitor.kt  EmvIntegrationManager.kt  EmvLoggingManager.kt  EmvMainEngine.kt  EmvMigrationTools.kt  EmvModels.kt  EmvNetworkInterface.kt  EmvNfcInterface.kt  EmvNotificationManager.kt  EmvPaymentProcessor.kt  EmvPerformanceMonitor.kt  EmvQrCodeProcessor.kt  EmvReceiptGenerator.kt  EmvReportingEngine.kt  EmvRiskManager.kt  EmvSchedulerManager.kt  EmvSecurityManager.kt  EmvSessionManager.kt  EmvTerminalInterface.kt  EmvTestingFramework.kt  EmvTokenManager.kt  EmvWorkflowEngine.kt
Android EMV/src/main/kotlin/com/nf_sp00f/app/emv/apdu/: ApduBuilder.kt
Android EMV/src/main/kotlin/com/nf_sp00f/app/emv/auth/: EmvAuthenticationEngine.kt
Android EMV/src/main/kotlin/com/nf_sp00f/app/emv/command/: EmvCommandInterface.kt
Work/: CONVERSION_STATUS.md  HYBRID_STRATEGY.md  KOTLIN_FUNCTION_INVENTORY.md  build_emv_library.sh
docs/mem/: .gitkeep
examples/: QuickStartExample.kt
(+48 files in other folders)
